; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_merge-index.c_merge_one_path.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_merge-index.c_merge_one_path.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @merge_one_path to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @merge_one_path(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = call i32 @strlen(i8* %5)
  %7 = call i32 @cache_name_pos(i8* %4, i32 %6)
  store i32 %7, i32* %3, align 4
  %8 = load i32, i32* %3, align 4
  %9 = icmp slt i32 %8, 0
  br i1 %9, label %10, label %16

10:                                               ; preds = %1
  %11 = load i32, i32* %3, align 4
  %12 = sub nsw i32 0, %11
  %13 = sub nsw i32 %12, 1
  %14 = load i8*, i8** %2, align 8
  %15 = call i32 @merge_entry(i32 %13, i8* %14)
  br label %16

16:                                               ; preds = %10, %1
  ret void
}

declare dso_local i32 @cache_name_pos(i8*, i32) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @merge_entry(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
